Edited README via GitHub

--- a/README
+++ b/README
@@ -10,4 +10,6 @@ dus uhh,, hier nog een paar links die mss in de server kunne als je tijd hebt :p
 
 laat ook maar, ,:p geen zin om al die woorde er weer tusse uit te doen,, marjah:p kijk maar ff oke?:p
 
-sorry voor steeds verandere maar had een foutje gemaakt: IN DE FOLDER FORMATIONX ZIT DE SOURCE EN CLIENT,, IK WEET ET IK CAPS,, MAAR DAN LEES JE ET BETER XD DUS UHH PROBEER DIE ALLEBIJ FF TE COMPILEN OKE?
+sorry voor steeds verandere maar had een foutje gemaakt: IN DE FOLDER FORMATIONX ZIT DE SOURCE EN CLIENT,, IK WEET ET IK CAPS,, MAAR DAN LEES JE ET BETER XD DUS UHH PROBEER DIE ALLEBIJ FF TE COMPILEN OK
+
+OKE LAAT ALLES MAAR. IK BEN TERUG, XD
